kuber2.3/manifest/deploy1witcollsion.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task1
  labels:
    app: task1stock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task1stock
  template:
    metadata:
      labels:
        app: task1stock
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort:  80
          name: http
        - containerPort: 443
          name: https

      - name: nginx
        image: nginx
        ports:
        - name: httpnginx
          containerPort: 80
        - name: httpsnginx
          containerPort: 443
      restartPolicy: Always
