kuber2.3/manifest/deploy1fixcollisionchangedeploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task1
  labels:
    app: task1stock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task1stock
  template:
    metadata:
      labels:
        app: task1stock
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort:  8888
          name: http
        - containerPort: 4433
          name: https

      - name: nginx
        image: nginx
        ports:
        - name: httpnginx
          containerPort: 80
        - name: httpsnginx
          containerPort: 443

      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: task1stock-svc
spec:
  selector:
    app: task1stock
  ports:
  - name: http-nginx
    port: 7777
    targetPort: 80
  - name: https-nginx
    port: 7778
    targetPort: 443
  - name: http-multitool
    port: 7779
    targetPort: 8888
  - name: https-multitool
    port: 7780
    targetPort: 4433
