kuber2.3/manifest/deploy2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task2
  labels:
    app: task2stock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task2stock
  template:
    metadata:
      labels:
        app: task2stock
    spec:
      volumes:
      - name: configmap-volume
        configMap:
          name: nginxresource
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: configmap-volume
          mountPath: /usr/share/nginx/html/
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443

      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: task2stock-svc
spec:
  selector:
    app: task2stock
  ports:
  - name: http
    port: 7777
    targetPort: 80
  - name: https
    port: 7778
    targetPort: 443
