kuber2.3/manifest/deployuingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task2
  labels:
    app: task2stock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task2stock
  template:
    metadata:
      labels:
        app: task2stock
    spec:
      volumes:
      - name: configmap-volume
        configMap:
          name: nginxresource
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: configmap-volume
          mountPath: /usr/share/nginx/html/
        ports:
#        - name: http
#          containerPort: 80
        - name: https
          containerPort: 443

      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: task2stock-svc
spec:
  selector:
    app: task2stock
  ports:
#  - name: http
#    port: 7777
#    targetPort: 80
  - name: https
    port: 443
    targetPort: 443

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - localkube15.com
      secretName: task2-tls
  ingressClassName: nginx
  rules:
  - host: localkube15.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task2stock-svc
            port:
              number: 443

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-ingress-kube15
  name: service-ingress-kube15
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: nginx-ingress
status:
  loadBalancer: {}
